# gnome-games

./: configure.ac
data/: org.gnome.Games.desktop.in  org.gnome.Games.gresource.xml
data/gamepads/: keyboard.gamepads.xml  linux.gamepads.xml
data/ui/: content-box.ui  gamepad-mapping-view.ui  gamepad-mapping.ui  input-box.ui  preferences-page-controls-gamepads.ui  preferences-page-gamepads.ui  preferences-page.ui  preferences-window.ui
plugins/amiga/src/: amiga-game.vala  amiga-plugin.vala
plugins/desktop/src/: desktop-plugin.vala  desktop-tracker-query.vala
plugins/doom/src/: doom-game.vala  doom-plugin.vala
plugins/dreamcast/src/: dreamcast-game.vala  dreamcast-plugin.vala
plugins/game-boy-advance/src/: game-boy-advance-game.vala  game-boy-advance-plugin.vala
plugins/game-boy/src/: game-boy-game.vala  game-boy-plugin.vala
plugins/game-cube/src/: game-cube-game.vala  game-cube-plugin.vala
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am
src/command/: command-runner.vala
src/commodore/: amiga-tracker-query.vala
src/core/: game-source.vala  runner.vala  uri-game-factory.vala
src/doom/: doom-tracker-query.vala
src/dummy/: dummy-game-source.vala  dummy-runner.vala
src/gamepad/: events.vala  gamepad-button.vala  gamepad-manager.vala  gamepad-mapping-type.vala  gamepad.vala  mapping-doc.vala  mapping-node.vala  standard-gamepad-axis.vala  standard-gamepad-button.vala
src/gamepad/core/: filter-type.vala  gamepad-mapping.vala  gamepad-source.vala  input-mapping.vala  input-type.vala
src/gamepad/keyboard/: keyboard-device.vala  keyboard-gamepad.vala  keyboard-mapping-monitor.vala  keyboard-mapping.vala  keyboard-source.vala  keyboard-widget.vala
src/gamepad/linux/: linux-gamepad-source.vala  linux-gamepad.vala  linux-joystick-event.vala  linux-joystick-mapping.vala  linux-joystick-monitor.vala  linux-joystick.vala
src/gamepad/vapi/: linux-joystick.vapi
src/generic/: generic-uri-game-factory.vala
src/nec/: pc-engine-tracker-query.vala
src/nintendo/: game-boy-advance-tracker-query.vala  game-boy-tracker-query.vala  game-cube-tracker-query.vala  game-cube-uid.vala  nes-tracker-query.vala  nintendo-64-tracker-query.vala  nintendo-ds-tracker-query.vala  snes-tracker-query.vala  wii-tracker-query.vala  wii-uid.vala  wii-ware-tracker-query.vala
src/retro/: retro-game.vala  retro-gamepad.vala  retro-runner.vala
src/sega/: dreamcast-tracker-query.vala  master-system-tracker-query.vala  mega-drive-tracker-query.vala  sega-saturn-tracker-query.vala
src/tracker/: tracker-game-source-multi-disk.vala  tracker-game-source.vala  tracker-query.vala
src/ui/: application-window.vala  application.vala  content-box.vala  gamepad-mapping-view.vala  gamepad-page.vala  input-box.vala  preferences-page-controls-gamepads.vala  preferences-page-gamepad-row-item.vala  preferences-page-gamepads-item.vala  preferences-page-gamepads-row.vala  preferences-page-gamepads.vala  preferences-page-plugins.vala  preferences-page.vala  preferences-window.vala  standard-gamepad-view.vala
src/utils/: directory-monitor.vala  filename-title.vala  fingerprint.vala  jaro-winkler-distance.vala  name.vala  path.vala  unique-identifier.vala  uri.vala  xml-doc.vala  xml-error.vala  xml-node.vala
(+31 files in other folders)
