bin_PROGRAMS = gnome-games

gresource_file = $(top_srcdir)/data/org.gnome.Games.gresource.xml

resource_files = $(shell \
	$(GLIB_COMPILE_RESOURCES) \
	--generate-dependencies \
	--sourcedir=$(top_srcdir)/data \
	$(gresource_file) \
)

resources.c: $(gresource_file) $(resource_files)
	$(AM_V_GEN) \
	$(GLIB_COMPILE_RESOURCES) \
		--target=$@ \
		--sourcedir=$(top_srcdir)/data \
		--generate-source \
		$<

BUILT_SOURCES = \
	resources.c \
	$(NULL)

EXTRA_DIST = \
	$(gresource_file) \
	$(NULL)

header_file = libgnome-games.h

vapi_file = gnome-games.vapi

vapidir = $(datadir)/vala/vapi
dist_vapi_DATA = $(vapi_file)

gnome_games_SOURCES = \
	command/command-error.vala \
	command/command-runner.vala \
	\
	core/game.vala \
	core/game-source.vala \
	core/plugin.vala \
	core/plugin-register.vala \
	core/plugin-registrar.vala \
	core/runner.vala \
	\
	dummy/dummy-game.vala \
	dummy/dummy-game-source.vala \
	dummy/dummy-runner.vala \
	\
	gamepad/core/gamepad-mapping.vala \
	gamepad/core/filter-type.vala \
	gamepad/core/input-type.vala \
	gamepad/core/input-mapping.vala \
	gamepad/events.vala \
	gamepad/gamepad.vala \
	gamepad/gamepad-button.vala \
	gamepad/gamepad-mapping-type.vala \
	gamepad/linux/linux-gamepad.vala \
	gamepad/linux/linux-joystick.vala \
	gamepad/linux/linux-joystick-event.vala \
	gamepad/linux/linux-joystick-mapping.vala \
	gamepad/mapping-doc.vala \
	gamepad/mapping-node.vala \
	gamepad/standard-gamepad-axis.vala \
	gamepad/standard-gamepad-button.vala \
	\
	retro/retro-error.vala \
	retro/retro-gamepad.vala \
	retro/retro-log.vala \
	retro/retro-runner.vala \
	\
	tracker/mime-type-tracker-query.vala \
	tracker/tracker-game-source.vala \
	tracker/tracker-query.vala \
	\
	ui/application.vala \
	ui/application-window.vala \
	ui/collection-icon-view.vala \
	ui/content-box.vala \
	ui/dummy-display.vala \
	ui/empty-collection.vala \
	ui/error-info-bar.vala \
	ui/game-icon-view.vala \
	ui/game-thumbnail.vala \
	ui/header-bar.vala \
	ui/preferences-page.vala \
	ui/preferences-page-plugins.vala \
	ui/preferences-page-plugins-item.vala \
	ui/preferences-window.vala \
	ui/remote-display.vala \
	ui/resume-dialog.vala \
	ui/search-bar.vala \
	ui/ui-state.vala \
	\
	utils/fingerprint.vala \
	utils/grep.vala \
	utils/xml-doc.vala \
	utils/xml-error.vala \
	utils/xml-node.vala \
	\
	config.vala \
	credits.vala \
	main.vala \
	$(BUILT_SOURCES) \
	$(NULL)

gnome_games_VALAFLAGS = \
	--vapidir gamepad/vapi \
	--target-glib=@GLIB_MIN_VERSION@ \
	--pkg gio-2.0 \
	--pkg glib-2.0 \
	--pkg gtk+-3.0 \
	--pkg libxml-2.0 \
	--pkg linux-joystick \
	--pkg posix \
	--pkg tracker-sparql-1.0 \
	--pkg retro-gobject-0.4 \
	--pkg retro-gtk-0.4 \
	--gresources $(gresource_file) \
	--vapi $(vapi_file) \
	-H $(header_file) \
	$(NULL)

gnome_games_CFLAGS = \
	$(GNOME_GAMES_CFLAGS) \
	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" \
	-DGAMES_PLUGINS_DIR=\"$(libdir)/gnome-games/plugins\" \
	$(NULL)

gnome_games_LDADD = \
	$(GNOME_GAMES_LIBS) \
	$(NULL)

gnome_gamesincludedir = $(includedir)
gnome_gamesinclude_HEADERS = \
	$(header_file) \
	$(NULL)

MAINTAINERCLEANFILES = \
	$(BUILT_SOURCES) \
	$(NULL)

-include $(top_srcdir)/git.mk
